--- a/config.json
+++ b/config.json
@@ -1618,49 +1618,42 @@
     },
     {
         "tab"               : "Design",
-        "key"               : "design.brand_primary",
+        "key"               : "brand-primary",
         "label"             : "Primary Colour",
         "type"              : "text",
         "default"           : "#008ebd"
     },
     {
         "tab"               : "Design",
-        "key"               : "design.brand_secondary",
+        "key"               : "brand-secondary",
         "label"             : "Secondary Colour",
         "type"              : "text",
         "default"           : "#d4021d"
     },
     {
         "tab"               : "Design",
-        "key"               : "design.link_hover_colour",
-        "label"             : "Link Hover Colour",
-        "type"              : "text",
-        "default"           : "#005571"
-    },
-    {
-        "tab"               : "Design",
-        "key"               : "design.brand_success",
+        "key"               : "brand-success",
         "label"             : "Success Colour",
         "type"              : "text",
         "default"           : "#7ED321"
     },
     {
         "tab"               : "Design",
-        "key"               : "design.brand_info",
-        "label"             : "Info Colour",
+        "key"               : "brand-info",
+        "label"             : "Information Colour",
         "type"              : "text",
         "default"           : "#5bc0de"
     },
     {
         "tab"               : "Design",
-        "key"               : "design.brand_warning",
+        "key"               : "brand-warning",
         "label"             : "Warning Colour",
         "type"              : "text",
         "default"           : "#f0ad4e"
     },
     {
         "tab"               : "Design",
-        "key"               : "design.brand_danger",
+        "key"               : "brand-danger",
         "label"             : "Danger Colour",
         "type"              : "text",
         "default"           : "#d9534f"
