--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-copy": "^1.1.0",
     "gulp-eslint": "^3.0.1",
     "gulp-ignore": "^2.0.1",
+    "gulp-insert": "^0.5.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-props": "^1.2.0",
     "gulp-rename": "^1.2.2",
