fix config entries

--- a/config.json
+++ b/config.json
@@ -1626,7 +1626,7 @@
     {
         "tab"               : "Design",
         "key"               : "brand-primary",
-        "label"             : "Primary Color",
+        "label"             : "Primary colour",
         "type"              : "text",
         "default"           : "#008ebd",
         "scss"              : true
@@ -1634,7 +1634,7 @@
     {
         "tab"               : "Design",
         "key"               : "brand-secondary",
-        "label"             : "Secondary Color",
+        "label"             : "Secondary colour",
         "type"              : "text",
         "default"           : "#d4021d",
         "scss"              : true
@@ -1642,7 +1642,7 @@
     {
         "tab"               : "Design",
         "key"               : "brand-success",
-        "label"             : "Success Color",
+        "label"             : "Success colour",
         "type"              : "text",
         "default"           : "#7ED321",
         "scss"              : true
@@ -1650,7 +1650,7 @@
     {
         "tab"               : "Design",
         "key"               : "design.colors.brand_info",
-        "label"             : "Info Color",
+        "label"             : "Info colour",
         "type"              : "text",
         "default"           : "#5bc0de",
         "scss"              : true
@@ -1658,7 +1658,7 @@
     {
         "tab"               : "Design",
         "key"               : "brand-info",
-        "label"             : "Information Color",
+        "label"             : "Information colour",
         "type"              : "text",
         "default"           : "#f0ad4e",
         "scss"              : true
@@ -1666,7 +1666,7 @@
     {
         "tab"               : "Design",
         "key"               : "brand-warning",
-        "label"             : "Warning Colour",
+        "label"             : "Warning colour",
         "type"              : "text",
         "default"           : "#f0ad4e",
         "scss"              : true
@@ -1674,7 +1674,7 @@
     {
         "tab"               : "Design",
         "key"               : "brand-danger",
-        "label"             : "Danger Color",
+        "label"             : "Danger colour",
         "type"              : "text",
         "default"           : "#d9534f",
         "scss"              : true
