CHANGE item sorting for prices - the sorting for prices will now use the avg key

--- a/config.json
+++ b/config.json
@@ -832,8 +832,8 @@
             "default.recommended_sorting"               : "Recommended",
             "texts.name1_asc"                           : "Item name A-Z",
             "texts.name1_desc"                          : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.availability.averageDays_asc"    : "Availability ⬆",
@@ -845,7 +845,7 @@
             "item.manufacturer.externalName_asc"        : "Manufacturer A-Z",
             "item.manufacturer.externalName_desc"       : "Manufacturer Z-A"
         },
-        "default"                   : "texts.name1_asc, texts.name1_desc, sorting.price.min_asc, sorting.price.max_desc"
+        "default"                   : "texts.name1_asc, texts.name1_desc, sorting.price.avg_asc, sorting.price.avg_desc"
     },
     {
         "tab"                       : "Pagination and sorting",
@@ -857,8 +857,8 @@
             "default.recommended_sorting"               : "Recommended",
             "texts.name1_asc"                           : "Item name A-Z",
             "texts.name1_desc"                          : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.availability.averageDays_asc"    : "Availability ⬆",
@@ -883,8 +883,8 @@
             "item.id_desc"                              : "Item ID ⬇",
             "texts.name_asc"                            : "Item name A-Z",
             "texts.name_desc"                           : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.id_asc"                          : "Variation ID ⬆",
@@ -918,8 +918,8 @@
             "item.id_desc"                              : "Item ID ⬇",
             "texts.name_asc"                            : "Item name A-Z",
             "texts.name_desc"                           : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.id_asc"                          : "Variation ID ⬆",
@@ -953,8 +953,8 @@
             "item.id_desc"                              : "Item ID ⬇",
             "texts.name_asc"                            : "Item name A-Z",
             "texts.name_desc"                           : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.id_asc"                          : "Variation ID ⬆",
@@ -987,8 +987,8 @@
             "default.recommended_sorting"               : "Recommended",
             "texts.name1_asc"                           : "Item name A-Z",
             "texts.name1_desc"                          : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.availability.averageDays_asc"    : "Availability ⬆",
@@ -1014,8 +1014,8 @@
             "item.id_desc"                              : "Item ID ⬇",
             "texts.name_asc"                            : "Item name A-Z",
             "texts.name_desc"                           : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.id_asc"                          : "Variation ID ⬆",
@@ -1050,8 +1050,8 @@
             "item.id_desc"                              : "Item ID ⬇",
             "texts.name_asc"                            : "Item name A-Z",
             "texts.name_desc"                           : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.id_asc"                          : "Variation ID ⬆",
@@ -1086,8 +1086,8 @@
             "item.id_desc"                              : "Item ID ⬇",
             "texts.name_asc"                            : "Item name A-Z",
             "texts.name_desc"                           : "Item name Z-A",
-            "sorting.price.min_asc"                     : "Price ⬆",
-            "sorting.price.max_desc"                    : "Price ⬇",
+            "sorting.price.avg_asc"                     : "Price ⬆",
+            "sorting.price.avg_desc"                    : "Price ⬇",
             "variation.createdAt_desc"                  : "Newest variation",
             "variation.createdAt_asc"                   : "Oldest variation",
             "variation.id_asc"                          : "Variation ID ⬆",
