--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
     "moment": "^2.22.1",
-    "owl.carousel": "^2.2.0",
+    "owl.carousel": "2.2.0",
     "popper.js": "^1.14.3",
     "shariff": "^1.24.0",
     "sticky-kit": "^1.1.3",
