CHANGE config.json - change deprecated value to boolean

--- a/config.json
+++ b/config.json
@@ -619,7 +619,7 @@
             "basket.order_total_net"        : "Total (Net)"
         },
         "default"                           : "basket.value_of_items_gross, basket.value_of_items_net, basket.shipping_costs_gross, basket.shipping_costs_net, basket.vat, basket.order_total_gross, basket.order_total_net",
-        "deprecated"                        : "true"
+        "deprecated"                        : true
     },
     {
         "tab"                               : "Shopping cart",
@@ -637,7 +637,7 @@
             "basket.order_total_net"        : "Total (Net)"
         },
         "default"                           : "basket.value_of_items_gross, basket.shipping_costs_gross, basket.order_total_gross",
-        "deprecated"                        : "true"
+        "deprecated"                        : true
     },
     {
         "tab"       : "Shopping cart",
